...
                DataColumn(label: Text('Actions')),
              ],
              rows: const [],
            ),
            const SizedBox(height: 20),
            FloatingActionButton.extended(
              key: const Key('add'),
              heroTag: "Add Task",
              onPressed: () => AddDialog.showAddAssignmentDialog(
                context: context,
                initializeData: _initializeData,
                courseController: courseController,
                nameController: nameController,
...
